// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`command deps it should be create the expected builder: usage 1`] = `
Array [
  "Usage: $0 deps [options]",
]
`;

exports[`command deps it should work with hooks: child-process 1`] = `
Object {
  "args": Array [
    "run",
    "precarna:deps",
  ],
  "command": "npm",
  "cwd": "/path/to/project",
}
`;

exports[`command deps it should work with hooks: child-process 2`] = `
Object {
  "args": Array [
    "run",
    "postcarna:deps",
  ],
  "command": "npm",
  "cwd": "/path/to/project",
}
`;

exports[`command deps it should work with hooks: depcheck 1`] = `
Array [
  "/path/to/project",
  Object {
    "detectors": Array [
      [Function],
      [Function],
    ],
    "ignoreDirs": Array [
      "node_modules",
    ],
    "ignoreMatches": Array [
      "@types/node",
      "typescript",
      "carna",
    ],
    "parsers": Object {
      "**/*.js": [Function],
      "**/*.jsx": [Function],
      "**/*.ts": [Function],
      "**/*.tsx": [Function],
    },
    "specials": Array [
      [Function],
      [Function],
      [Function],
      [Function],
      [Function],
    ],
  },
]
`;

exports[`command deps it should work: depcheck 1`] = `
Array [
  "/path/to/project",
  Object {
    "detectors": Array [
      [Function],
      [Function],
    ],
    "ignoreDirs": Array [
      "node_modules",
    ],
    "ignoreMatches": Array [
      "@types/node",
      "typescript",
      "carna",
    ],
    "parsers": Object {
      "**/*.js": [Function],
      "**/*.jsx": [Function],
      "**/*.ts": [Function],
      "**/*.tsx": [Function],
    },
    "specials": Array [
      [Function],
      [Function],
      [Function],
      [Function],
      [Function],
    ],
  },
]
`;
